Add /metadata/{accession} endpoint and minor fix to createStructuredDataJsonArray.
